--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         #display {
-            margin-top: 25px;
+            margin-top: 20px;
             font-size: 30px;
             padding: 0 20px;
         }
@@ -25,16 +25,19 @@
             margin-top: 10px;
         }
 
-        @media screen and (max-width: 767px) and (min-width: 500px) {
-            input[type=text] {
+        @media screen and (max-width: 767px) and (min-width: 400px) {
+            input[type=number] {
                 width: 50%;
                 margin: 0 auto;
             }
 
             #display {
-            font-size: 28px;
+            margin-top: 15px;
+            font-size: 25px;
             padding: 0 10px;
-        }
+            }
+
+            
         }
 
     </style>
